<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#dbdbdb"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/textViewLeftDownloadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewLeftDownloadButton"
            android:textColor="#000000" />

        <Button
            android:id="@+id/downLoadFaceButton"
            style="@style/btnStyleGenoa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:onClick="downLoadFaceOnClickHandler"
            android:text="@string/download" />

        <TextView
            android:id="@+id/textViewRightDownloadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewRightDownloadButton"
            android:textColor="#000000" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical" >
    </ListView>

</LinearLayout>