<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/manageLinearLayoutMain"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center"
    android:background="#ffffff"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/miniFaceImgLEye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:contentDescription="@+string/lefteye" />
    
    <ImageView
        android:id="@+id/miniFaceImgMouth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:contentDescription="@+string/mouth" />
    
    <ImageView
        android:id="@+id/miniFaceImgREye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="100dp"
        android:contentDescription="@+string/righteye" />

    <Button
        android:id="@+id/miniFaceSelect"
        style="@style/btnStyleArsenic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:onClick="selectFaceOnClickHandler"
        android:layout_marginRight="5dp"
        android:text="@string/select" />

    <Button
        android:id="@+id/miniFaceDelete"
        style="@style/btnStyleArsenic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:onClick="removeItemOnClickHandler"
        android:layout_marginRight="5dp"
        android:text="@string/delete" />

    <Button
        android:id="@+id/miniFaceUpload"
        style="@style/btnStyleGenoa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:onClick="uploadItemOnClickHandler"
        android:text="@string/upload" />

</LinearLayout>