<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/buttonQuit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/cross_img"
        android:contentDescription="@+string/quitButton"
        android:onClick="onClickQuit" />

    <ImageButton
        android:id="@+id/buttonMenu"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/buttonQuit"
        android:background="@drawable/menu_img"
        android:contentDescription="@+string/menuButton"
        android:onClick="onClickMenu" />

    <LinearLayout
        android:id="@+id/linearLayoutMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000"
            android:textSize="80sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearLayoutSubTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    	    android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="30dp" >

            <Button
                android:id="@+id/buttonNew"
                style="@style/btnStyleBreakerBay"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:onClick="onClickNewFace"
                android:text="@string/newFace" />
            <Button
                android:id="@+id/buttonPlay"
                style="@style/btnStyleBreakerBay"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:onClick="onClickPlay"
                android:text="@string/playGame" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutSubBottom"
    	    android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonManage"
                style="@style/btnStyleBreakerBay"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:onClick="onClickManage"
                android:text="@string/manageFace" />

<!--             <Button -->
<!--                 android:id="@+id/buttonDownload" -->
<!--                 style="@style/btnStyleBreakerBay" -->
<!--                 android:layout_width="160dp" -->
<!--                 android:layout_height="wrap_content" -->
<!--                 android:onClick="onClickDownload" -->
<!--                 android:text="@string/downloadFace" /> -->
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/epicFace"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@+string/epicFace"
        android:src="@drawable/epic_face" />

</RelativeLayout>